# memoriaapp

./: .gitignore  create_admin.py  pyproject.toml  requirements.txt  z-iia_instruccions.md
config/: settings.py  urls.py
core/: admin.py  filters.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_jugador_categoria_jugador_titol_alter_club_nom_and_more.py  0003_alter_jugador_categoria.py
core/templates/admin/: base_site.html
core/templates/core/: detall_jugador.html  llista.html  login.html  pujar_foto.html  quiz.html  registre.html
